# rimphony

./: .travis.yml  Cargo.toml  LICENSE  README.md
benches/: powerlaw.rs
examples/: all-pitchykappa-cgs.rs  crank-out-pitchykappa.rs  crank-out-pitchypl.rs  demo-powerlaw.rs  one-pitchypl-normalized.rs  one-powerlaw-direct.rs  one-powerlaw-normalized.rs  one-powerlaw.rs  qag.rs  qagiu.rs
gsl-sys/: Cargo.toml  build.rs  wrapper.h
gsl-sys/src/: errno.rs  integration.rs  lib.rs
leung-bessel/: Cargo.toml  build.rs
leung-bessel/src/: bessel.c  lib.rs
src/: gsl.rs  heyvaerts.rs  lib.rs  pitchy_kappa.rs  pitchy_pl.rs  power_law.rs  symphony.rs  thermal_juettner.rs
test-support/: Cargo.toml
test-support/src/: lib.rs
tests/: symphony-powerlaw.txt  symphony.rs
