[package]
name = "rimphony"
version = "0.1.0"
authors = ["Peter Williams <peter@newton.cx>"]
license = "MIT"

[workspace]

[dependencies]
gsl-sys = { path = "gsl-sys" }
leung-bessel = { path = "leung-bessel" }

[dev-dependencies]
bencher = "^0.1"
rand = "^0.3"

[[bench]]
name = "powerlaw"
harness = false
