# Copyright 2017 Peter Williams <peter@newton.cx> and collaborators
# Licensed under the GPL version 3.

[package]
name = "rimphony"
version = "0.1.0"
authors = ["Peter Williams <peter@newton.cx>"]
license = "GPLv3"

[workspace]

[dependencies]
clap = "^2.26"
gsl-sys = { path = "gsl-sys" }
leung-bessel = { path = "leung-bessel" }
special-fun = "^0.1"

[dev-dependencies]
assert_approx_eq = "^1.0"
bencher = "^0.1"
rand = "^0.3"
regex = "^0.2"

[[bench]]
name = "powerlaw"
harness = false
