# Copyright 2017-2018 Peter Williams <peter@newton.cx> and collaborators
# Licensed under the GPL version 3.

[package]
name = "rimphony"
version = "0.1.0"
authors = ["Peter Williams <peter@newton.cx>"]
license = "GPLv3"

[workspace]

[dependencies]
clap = "^2.26"
gsl-sys = { path = "gsl-sys" }
leung-bessel = { path = "leung-bessel" }
slog = "^2.2"
special-fun = { git = "https://github.com/pkgw/special-fun", version = "^0.1" } # hacked to not use -march=native

[dev-dependencies]
assert_approx_eq = "^1.0"
bencher = "^0.1"
rand = "^0.5"
regex = "^1.0"
rimphony-test-support = { path = "test-support" }
slog-async = "^2.3"
slog-term = "^2.4"

[[bench]]
name = "powerlaw"
harness = false

[features]
max_level_trace = ["slog/max_level_trace"]
release_max_level_warn = ["slog/release_max_level_warn"]
