# Copyright 2017 Peter Williams <peter@newton.cx> and collaborators
# Licensed under the GPL version 3.

[package]
name = "gsl-sys"
version = "0.1.0"
authors = ["Peter Williams <peter@newton.cx>"]
links = "gsl"
build = "build.rs"
license = "GPLv3"

[build-dependencies]
bindgen = "0.52"
pkg-config = "^0.3"
